# django-fileindex

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  COVERAGE.md  LICENSE  MANIFEST.in  README.md  conftest.py  docker-compose.yml  prek.toml  pyproject.toml  tasks.py  test_with_postgres.sh
.github/workflows/: ci.yml  publish.yml
.serena/: project.yml
docs/: file-uploads.md
fileindex/: __init__.py  admin.py  apps.py  checks.py  exceptions.py  factories.py  fields.py  file_import_service.py  fileutils.py  forms.py  models.py  queues.py  tasks.py  test_fileutils.py  test_models.py  upload_utils.py  urls.py  views.py  watch_service.py
fileindex/management/commands/: backup_orphaned_files.py  fileindex_add.py  fileindex_add_mediainfo.py  fileindex_backup_orphaned.py  fileindex_create_avif_for_gif.py  fileindex_populate_missing_metadata.py  fileindex_watch.py  fix_avif_metadata.py  migrate_fileindex_structure.py  retry_image_metadata.py  unpad_hashes.py  validate_files.py  worker.py
fileindex/migrations/: 0001_initial.py  0002_alter_filepath_id_alter_indexedfile_id.py  0002_alter_indexedfile_size_to_biginteger.py  0002_filepath_hostname.py  0003_alter_indexedfile_size_to_biginteger.py  0003_auto_20200529_1932.py  0004_indexedfile_file.py  0004_remove_indexedfile_visual_media_requires_dimensions_and_more.py  0005_auto_20200529_2131.py  0005_use_bigautofield_for_ids.py  0006_alter_indexedfile_corrupt.py  0006_indexedfile_fileindex_i_derived_136784_idx.py  0007_indexedimage.py  0008_alter_indexedimage_thumbhash.py  0009_indexedfile_derived_from.py
fileindex/services/: __init__.py  animated_parsers.py  avif_generation.py  ffprobe.py  file_import.py  file_validation.py  image_metadata.py  media_analysis.py  media_metadata.py  mediainfo_analysis.py  metadata.py  metadata_extraction.py  thumbhash.py  thumbnails.py  video_thumbnail.py  watch.py
fileindex/static/admin/css/: fileindex_admin.css
fileindex/templates/fileindex/: files_without_metadata.html  video_metadata_issues.html
tests/: settings.py  settings_postgres.py  test_admin.py  test_animated_parsers.py  test_checks.py  test_commands.py  test_factories.py  test_fields.py  test_file_import_service.py  test_fileindex_safeguard.py  test_filename_property.py  test_forms.py  test_formsets.py  test_hash_progress.py  test_image_metadata_consistency.py  test_mediainfo_analysis.py  test_metadata_extraction.py  test_metadata_typedicts.py  test_migrate_fileindex_structure.py  test_models.py  test_services.py  test_subprocess_timeout.py  test_tasks.py  test_upload_utils.py  test_views.py  test_watch_service.py  urls.py  utils.py
tests/sample_files/: test_1.5sec.avif
